fix(Header): add display flex to menu items for correct alignment

--- a/src/layouts/Header/Header.scss
+++ b/src/layouts/Header/Header.scss
@@ -82,6 +82,11 @@
       }
     }
 
+    &-item {
+      display: flex;
+    }
+
+
     &-link {
       font-size: 24px;
       text-transform: uppercase;
